fable/test/semantic_error/common_equivalence.f
      program prog
      common /cmn/ nums1(2), nums2(2)
      equivalence(nums1, nums2)
      end
